# ContinuousIntegrationApplication

./: README.md  continuousintegrationdemo.spec  manage.py  pyproject.toml  pytest.ini
.github/workflows/: Get-Version.ps1  publish.yml
continuousintegrationdemo/: asgi.py  settings.py  urls.py  wsgi.py
