[tool.poetry]
name = "continuousintegrationdemo"
version = "0.1.0"
description = "Demonstration for continuous integration of a Python-based web application using GitHub workflows"
authors = ["Aaron Shiels <aaron.shiels@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
pyinstaller = "^4.5.1"
pytest-django = "^4.4.0"
continuousintegrationdependency = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
